fixed cors issue

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://minilink.onrender.com/" />
+    <meta property="og:url" content="https://minilink-web.vercel.app" />
     <meta
       property="og:title"
       content="MiniLink — Advanced URL Shortening & Analytics"
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:image"
-      content="https://minilink-frontend.onrender.com/react.svg"
+      content="https://minilink-web.vercel.app/react.svg"
     />
     <meta property="og:site_name" content="MiniLink" />
 
